--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -104,6 +104,10 @@
     padding-top: 4em;
 }
 
+.pl2{
+    padding-left: 2em;
+}
+
 .mt1{
     margin-top: 1em;
 }
@@ -287,9 +291,18 @@ html {
 }
 
 .modalEstilo{
-    width: 50%;
+    width: 40%;
     border-radius: 12px;
     border: none;
-
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
+
+dialog::backdrop {
+  background: rgba(0, 0, 0, 0.4);
+}
+
 
