--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -202,9 +202,6 @@ body{
   color: #d47800;
 }
 
-.listaNav li a.active i {
-  color: inherit;
-}
 
 aside{
     padding-left: 3em;
@@ -250,6 +247,11 @@ html {
 
 .h2Home{
     font-size: 45px;
+}
+
+.frase{
+    font-size: 100px;
+    text-align: center;
 }
 
 .h3Home{
@@ -307,6 +309,48 @@ html {
 
 dialog::backdrop {
   background: rgba(0, 0, 0, 0.4);
+}
+
+.entradaBanner{
+    animation: mov 0.8s ease-in;
+}
+
+@keyframes mov{
+    from{
+        opacity: 0.5;
+        filter: blur(8px) grayscale(90%);
+    }
+    to{
+        opacity: 1;
+        filter: blur(0px) grayscale(0%);
+    }
+}
+
+.hidden{
+    opacity: 0;
+    transition: all 1.4s ;
+}
+
+.show{
+    opacity: 1;
+}
+
+@keyframes aparecer{
+    from{
+        opacity: 0;
+        scale:60%;
+    }
+
+    to{
+        opacity: 1;
+        scale:100%;
+    }
+}
+
+.articulos{
+    animation: aparecer ease-in-out both;
+    animation-timeline:view();
+    animation-range: entry 0% cover 15%;
 }
 
 
