--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -412,6 +412,9 @@ dialog::backdrop {
         text-decoration: none;
     }
    
+    .displayNonet{
+        display: none;
+    }
 }
 
  /*MOBILE*/
